--- a/css/style.css
+++ b/css/style.css
@@ -20,4 +20,26 @@ body {
   width: 100%;
   height: 100%;
 }
+
+:root {
+  --grid-columns: 1;
+}
+
+.container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  :root {
+    --grid-columns: 2;
+  }
+}
 /*# sourceMappingURL=style.css.map */
