--- a/css/style.scss
+++ b/css/style.scss
@@ -1,12 +1,20 @@
 @import './reset';
 
 :root{
-    
+    --grid-columns: 1;
 }
 
+.container{
+    display: flex;
+    flex-direction: column;
+    max-width: 1100px;
+    margin: 0 auto;
+}
 
 @media screen and (min-width: 768px){
-
+    :root{
+        --grid-columns: 2;
+    }
 }
 
 @media screen and (min-width: 1024px){
