--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,33 @@ body {
 }
 
 :root {
+  --clr-primary: #577be0;
+  --clr-primary-tint: #6a8ae0;
+  --clr-primary-shade: #3e63ca;
+  --clr-secondary: #6d47c7;
+  --clr-secondary-tint: #8367c4;
+  --clr-secondary-shade: #6133cc;
+  --clr-dark: #292929;
+  --clr-dark-tint: #1b1b1b;
+  --clr-dark-shade: #111111;
+  --clr-light: #efefef;
+  --clr-light-tint: #ffffff;
+  --clr-light-shade: #dddddd;
   --grid-columns: 1;
+}
+
+/*
+    HR - Hero
+    RC - Recent
+    AD - Additional
+    FT - Footer
+*/
+#root {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[var];
+      grid-template-columns: repeat(var(--grid-columns), 1fr);
+      grid-template-areas: 'HR' 'RC' 'AD' 'FT';
 }
 
 .container {
@@ -33,13 +59,59 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   max-width: 1100px;
   margin: 0 auto;
+}
+
+.hero {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: HR;
+  width: 100vw;
+  padding: 2rem;
+  background-color: var(--clr-primary);
+}
+
+.hero h1 {
+  color: var(--clr-light-tint);
+}
+
+.recent {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: RC;
+}
+
+.additional {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  grid-area: AD;
+}
+
+.footer {
+  -ms-grid-row: 4;
+  -ms-grid-column: 1;
+  grid-area: FT;
 }
 
 @media screen and (min-width: 768px) {
   :root {
     --grid-columns: 2;
+  }
+  #root {
+        grid-template-areas: 'HR HR' 'RC AD' 'RC AD' 'FT FT';
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  :root {
+    --grid-columns: 3;
+  }
+  #root {
+        grid-template-areas: 'HR HR HR' 'RC RC AD' 'RC RC AD' 'FT FT FT';
   }
 }
 /*# sourceMappingURL=style.css.map */
