--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ body {
 #root {
   display: -ms-grid;
   display: grid;
+  gap: 2rem;
   -ms-grid-columns: (1fr)[var];
       grid-template-columns: repeat(var(--grid-columns), 1fr);
       grid-template-areas: 'HR' 'RC' 'AD' 'FT';
@@ -62,8 +63,10 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 80%;
   max-width: 1100px;
   margin: 0 auto;
+  gap: 2rem;
 }
 
 .hero {
@@ -83,10 +86,18 @@ body {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: RC;
+  max-width: 600px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
 }
 
 .recent .article {
-  margin: 1rem;
   padding: 1rem;
   background-color: var(--clr-light);
   border-radius: 1rem;
@@ -95,11 +106,13 @@ body {
 .recent .article__title {
   color: var(--clr-dark);
   text-align: center;
+  margin-bottom: .5rem;
 }
 
 .recent .article__date {
-  color: var(--clr-secondary);
+  color: var(--clr-primary-tint);
   text-align: center;
+  margin-bottom: 1.5rem;
 }
 
 .recent .article__text {
@@ -110,6 +123,133 @@ body {
   -ms-grid-row: 3;
   -ms-grid-column: 1;
   grid-area: AD;
+  width: 100%;
+  max-width: 300px;
+}
+
+.additional__first {
+  padding: 1rem;
+}
+
+.additional__first h3 {
+  color: var(--clr-primary);
+  position: relative;
+}
+
+.additional__first h3::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background-color: var(--clr-primary);
+  display: block;
+  border-radius: 100px;
+}
+
+.additional__first .last-ones-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  list-style-type: none;
+  margin-top: 1rem;
+  gap: 1.4rem;
+}
+
+.additional__first .last-ones-list__item {
+  text-decoration: none;
+  position: relative;
+}
+
+.additional__first .last-ones-list__item a {
+  text-decoration: inherit;
+  color: inherit;
+}
+
+.additional__first .last-ones-list__item:hover {
+  text-decoration: underline;
+}
+
+.additional__first .last-ones-list__item::before {
+  content: '';
+  position: absolute;
+  left: -6px;
+  width: 3px;
+  height: 100%;
+  background-color: var(--clr-primary);
+  display: block;
+  border-radius: 100px;
+}
+
+.additional__second {
+  padding: 1rem;
+}
+
+.additional__second h3 {
+  color: var(--clr-primary);
+  position: relative;
+  text-align: center;
+}
+
+.additional__second h3::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background-color: var(--clr-primary);
+  display: block;
+  border-radius: 100px;
+}
+
+.additional__second .social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  list-style-type: none;
+  margin-top: 1rem;
+  gap: 1.4rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.additional__second .social-list__item {
+  text-decoration: none;
+  position: relative;
+}
+
+.additional__second .social-list__item:nth-child(1) a {
+  background-color: #3b5999;
+}
+
+.additional__second .social-list__item:nth-child(2) a {
+  background-color: #e4405f;
+}
+
+.additional__second .social-list__item:nth-child(3) a {
+  background-color: #55acee;
+}
+
+.additional__second .social-list__item a {
+  text-decoration: inherit;
+  color: var(--clr-light-tint);
+  font-weight: 600;
+  padding: 1rem 2rem;
+  display: inline-block;
+  text-align: center;
+  width: 150px;
+  border-radius: 1rem;
+}
+
+.additional__second .social-list__item:hover {
+  opacity: .7;
 }
 
 .footer {
