--- a/css/style.scss
+++ b/css/style.scss
@@ -25,6 +25,7 @@
 
 #root{
     display: grid;
+    gap: 2rem;
     grid-template-columns: repeat(var(--grid-columns), 1fr);
     grid-template-areas: 
         'HR'
@@ -37,8 +38,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 80%;
     max-width: 1100px;
     margin: 0 auto;
+    gap: 2rem;
 }
 
 .hero{
@@ -54,23 +57,28 @@
 
 .recent{
     grid-area: RC;
+    max-width: 600px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 
     .article{
-        margin: 1rem;
         padding: 1rem;
         background-color: var(--clr-light);
         border-radius: 1rem;
-
+        
         &__title{
             color: var(--clr-dark);
             text-align: center;
+            margin-bottom: .5rem;
         }
-
+        
         &__date{
-            color: var(--clr-secondary);
+            color: var(--clr-primary-tint);
             text-align: center;
+            margin-bottom: 1.5rem;
         }
-
+        
         &__text{
             text-align: justify;
         }
@@ -79,6 +87,121 @@
 
 .additional{
     grid-area: AD;
+    width: 100%;
+    max-width: 300px;
+
+    &__first{
+        padding: 1rem;
+
+        h3{
+            color: var(--clr-primary);
+            position: relative;
+
+            &::after{
+                content: '';
+                position: absolute;      
+                width: 100%;
+                height: 3px;
+                background-color: var(--clr-primary);
+                display: block;
+                border-radius: 100px;
+            }
+        }
+
+        .last-ones-list{
+            display: flex;
+            flex-direction: column;
+            list-style-type: none;
+            margin-top: 1rem;
+            gap: 1.4rem;
+
+            &__item{
+                text-decoration: none;
+                position: relative;
+
+                a{
+                    text-decoration: inherit;
+                    color: inherit;
+                }
+
+                &:hover{
+                    text-decoration: underline;
+                }
+
+                &::before{
+                    content: '';
+                    position: absolute;
+                    left: -6px;
+                    width: 3px;
+                    height: 100%;
+                    background-color: var(--clr-primary);
+                    display: block;
+                    border-radius: 100px;
+                }
+            }
+        }
+    }
+
+    &__second{
+        padding: 1rem;
+
+        h3{
+            color: var(--clr-primary);
+            position: relative;
+            text-align: center;
+
+            &::after{
+                content: '';
+                position: absolute;      
+                width: 100%;
+                height: 3px;
+                background-color: var(--clr-primary);
+                display: block;
+                border-radius: 100px;
+            }
+        }
+
+        .social-list{
+            display: flex;
+            flex-direction: column;
+            list-style-type: none;
+            margin-top: 1rem;
+            gap: 1.4rem;
+            align-items: center;
+
+            &__item{
+                text-decoration: none;
+                position: relative;
+
+                &:nth-child(1){
+                    a{ background-color: #3b5999; }
+                }
+
+                &:nth-child(2){
+                    a{ background-color: #e4405f; }
+                }
+                
+                &:nth-child(3){
+                    a{ background-color: #55acee; }
+                }
+
+                a{
+                    text-decoration: inherit;
+                    color: var(--clr-light-tint);
+                    font-weight: 600;
+                    padding: 1rem 2rem;
+                    display: inline-block;
+                    text-align: center;
+                    width: 150px;
+                    border-radius: 1rem;
+                }
+
+                &:hover{
+                    opacity: .7;
+                }
+            }
+        }
+    }
 }
 
 .footer{
