--- a/css/style.css
+++ b/css/style.css
@@ -256,6 +256,11 @@ body {
   -ms-grid-row: 4;
   -ms-grid-column: 1;
   grid-area: FT;
+  width: 100vw;
+  background-color: var(--clr-primary-shade);
+  color: var(--clr-light-tint);
+  padding: 1rem 2rem;
+  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
