--- a/css/style.scss
+++ b/css/style.scss
@@ -206,6 +206,11 @@
 
 .footer{
     grid-area: FT;
+    width: 100vw;
+    background-color: var(--clr-primary-shade);
+    color: var(--clr-light-tint);
+    padding: 1rem 2rem;
+    text-align: center;
 }
 
 @media screen and (min-width: 768px){
