--- a/css/style.scss
+++ b/css/style.scss
@@ -66,7 +66,8 @@
         padding: 1rem;
         background-color: var(--clr-light);
         border-radius: 1rem;
-        
+        box-shadow: 0 7px 10px 0 rgba(black, .3);
+
         &__title{
             color: var(--clr-dark);
             text-align: center;
@@ -146,7 +147,7 @@
     &__second{
         padding: 1rem;
         width: 100%;
-        
+
         h3{
             color: var(--clr-primary);
             position: relative;
@@ -174,6 +175,7 @@
             &__item{
                 text-decoration: none;
                 position: relative;
+                transition: opacity .2s;
 
                 &:nth-child(1){
                     a{ background-color: #3b5999; }
