--- a/css/style.scss
+++ b/css/style.scss
@@ -24,6 +24,7 @@
 */
 
 #root{
+    position: relative;
     display: grid;
     gap: 2rem;
     grid-template-columns: repeat(var(--grid-columns), 1fr);
@@ -215,6 +216,9 @@
     color: var(--clr-light-tint);
     padding: 1rem 2rem;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @media screen and (min-width: 768px){
