--- a/css/style.scss
+++ b/css/style.scss
@@ -7,8 +7,8 @@
     --clr-secondary: #6d47c7;
     --clr-secondary-tint: #8367c4;
     --clr-secondary-shade: #6133cc;
-    --clr-dark: #292929;
-    --clr-dark-tint: #1b1b1b;
+    --clr-dark: #1b1b1b;
+    --clr-dark-tint: #292929;
     --clr-dark-shade: #111111;
     --clr-light: #efefef;
     --clr-light-tint: #ffffff;
@@ -264,5 +264,31 @@
             'RC RC AD'
             'RC RC AD'
             'FT FT FT';
+    }
+}
+
+@media (prefers-color-scheme: dark){
+    body{ background-color: var(--clr-dark); }
+
+    .recent{
+        .article{
+            background-color: var(--clr-dark-tint);
+    
+            &__title{ color: var(--clr-light-tint); }
+            
+            &__date{ color: var(--clr-primary-tint); }
+            
+            &__text{ color: var(--clr-light); }
+        }
+    }
+
+    .additional{
+        &__first{
+            .last-ones-list{
+                &__item{
+                    a{ color: var(--clr-light); }
+                }
+            }
+        }
     }
 }
