Centralizing hero fix

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,15 @@ body {
   width: 100vw;
   padding: 2rem;
   background-color: var(--clr-primary);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .hero h1 {
@@ -265,9 +274,7 @@ body {
   grid-area: FT;
   width: 100vw;
   background-color: var(--clr-primary-shade);
-  color: var(--clr-light-tint);
   padding: 1rem 2rem;
-  text-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -277,6 +284,11 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.footer h4 {
+  color: var(--clr-light-tint);
+  text-align: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -291,6 +303,9 @@ body {
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     grid-area: HR;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
   .recent .article__title {
     text-align: left;
