--- a/css/style.scss
+++ b/css/style.scss
@@ -16,6 +16,12 @@
     --grid-columns: 1;
 }
 
+@mixin flex-center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /*
     HR - Hero
     RC - Recent
@@ -51,6 +57,8 @@
     padding: 2rem;
     background-color: var(--clr-primary);
     
+    @include flex-center();
+
     h1{
         color: var(--clr-light-tint)
     }
@@ -213,12 +221,14 @@
     grid-area: FT;
     width: 100vw;
     background-color: var(--clr-primary-shade);
-    color: var(--clr-light-tint);
     padding: 1rem 2rem;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+    @include flex-center();
+    
+    h4{
+        color: var(--clr-light-tint);
+        text-align: center;
+    }
 }
 
 @media screen and (min-width: 768px){
@@ -234,7 +244,10 @@
             'FT FT';
     }
 
-    .hero{ grid-area: HR; }
+    .hero{
+        grid-area: HR;
+        justify-content: flex-start;
+    }
 
     .recent{
         .article{
